Modify orders endpoints to be consistent
